Fix spacing below product card title

--- a/src/postcss/woocommerce/grid.css
+++ b/src/postcss/woocommerce/grid.css
@@ -192,6 +192,7 @@
 
 .woocommerce-loop-product__title {
   margin-top: 0.25em;
+  margin-bottom: 0.5em;
   font-size: 1rem;
   font-weight: var(--font-normal);
 }
